--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
+    "angular-cli-ghpages": "^2.0.3",
     "typescript": "~5.5.2"
   }
 }
